Autenticacion con correo electrónico, facebook y google, facebook con problemas de keyhash, se eliminará debig.keystore de .android, luego de autenticar deriva a ContainerActivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion '25.0.0'
     defaultConfig {
-        applicationId "cl.cooperativa.presidencialesencooperativa"
+        applicationId 'cl.cooperativa.presidenciales2018encooperativa'
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -17,6 +17,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -24,7 +26,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    apply plugin: 'com.google.gms.google-services'
+
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.2.0'
@@ -37,9 +39,10 @@ dependencies {
     compile 'com.zoonref:simple-view-behavior:1.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'pub.devrel:easypermissions:0.1.7'
-    compile 'com.google.firebase:firebase-auth:9.2.0'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-storage:9.2.0'
-
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
     testCompile 'junit:junit:4.12'
 }
 
