--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cl.cooperativa.presidencialesencooperativa">
+    package="cl.cooperativa.presidenciales2018encooperativa">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -11,36 +11,54 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ContainerActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme">
+
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
+    <activity
+            android:name="cl.cooperativa.presidenciales2018encooperativa.Autentication"
+            android:configChanges=
+            "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+           >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
 
+
+        </activity>
         <activity
-            android:name=".PictureDetailActivity"
-            android:parentActivityName=".ContainerActivity">
+            android:name="cl.cooperativa.presidenciales2018encooperativa.ContainerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ContainerActivity" /> <!-- soporte para versiones anteriores a lollipop o 5.1 -->
+                android:value="cl.cooperativa.presidenciales2018encooperativa.ContainerActivity" /> <!-- soporte para versiones anteriores a lollipop o 5.1 -->
+            >
+
+        </activity>
+        <activity
+            android:name="cl.cooperativa.presidenciales2018encooperativa.PictureDetailActivity"
+            android:parentActivityName="cl.cooperativa.presidenciales2018encooperativa.ContainerActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="cl.cooperativa.presidenciales2018encooperativa.ContainerActivity" /> <!-- soporte para versiones anteriores a lollipop o 5.1 -->
             >
 
         </activity>
 
-        <activity android:name=".MyAdapterDetail">
+        <activity android:name="cl.cooperativa.presidenciales2018encooperativa.MyAdapterDetail">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ContainerActivity" /> <!-- soporte para versiones anteriores a lollipop o 5.1 -->
+                android:value="cl.cooperativa.presidenciales2018encooperativa.ContainerActivity" /> <!-- soporte para versiones anteriores a lollipop o 5.1 -->
             >
 
         </activity>
         <service
-            android:name=".MyDownloadService"
+            android:name="cl.cooperativa.presidenciales2018encooperativa.MyDownloadService"
             android:exported="false"/>
     </application>
 
